--- a/nevada_fish_slam.html
+++ b/nevada_fish_slam.html
@@ -6,8 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="keywords" content="Nevada Native Fish Slam, native fish challenge Nevada, Nevada fishing challenge, native fish species Nevada, best fishing spots Nevada, Nevada fish species, Nevada fishing challenge guide">
 
-<title>Doctor Dry Fly - Nevada Native Fish Slam</title>
+<title>Doctor Dry Fly - Nevada Native Fish Slam: A Guide to Catching Nevada’s Native Fish Species</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -114,14 +115,23 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#bonneville-cutthroathendrys-creek" id="toc-bonneville-cutthroathendrys-creek" class="nav-link active" data-scroll-target="#bonneville-cutthroathendrys-creek">Bonneville Cutthroat–Hendry’s Creek</a></li>
+  <li><a href="#lahontan-cutthroatmarys-river-attempt-1" id="toc-lahontan-cutthroatmarys-river-attempt-1" class="nav-link" data-scroll-target="#lahontan-cutthroatmarys-river-attempt-1">Lahontan Cutthroat–Marys River, Attempt 1</a></li>
+  <li><a href="#yellowstone-cutthroatgoose-creek" id="toc-yellowstone-cutthroatgoose-creek" class="nav-link" data-scroll-target="#yellowstone-cutthroatgoose-creek">Yellowstone Cutthroat–Goose Creek</a></li>
+  <li><a href="#lahontan-cutthroatmarys-river-attempt-2" id="toc-lahontan-cutthroatmarys-river-attempt-2" class="nav-link" data-scroll-target="#lahontan-cutthroatmarys-river-attempt-2">Lahontan Cutthroat–Marys River, Attempt 2</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Nevada Native Fish Slam</h1>
+<h1 class="title">Nevada Native Fish Slam: A Guide to Catching Nevada’s Native Fish Species</h1>
 </div>
 
 
@@ -136,12 +146,13 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
+<p>##Background on the Nevada Native Fish Slam</p>
 <p>I have completed four slams, including the Western Native Fish Challenge. I debate whether the Wyoming or Utah slam was easier to finish, but I am absolutely certain about which one is the most difficult. Nevada has it all–long driving distances, small, brushy creeks, difficult to find and catch fish, and unlike Utah and Wyoming which require catching four fish, Nevada has six(!) in its slam. Though California also requires six, I found the fishing much easier.</p>
 <p>I have not completed the Nevada slam, and according to their angler recognition program, fewer than 30 people have ever completed it in the ten years or so it’s been around. I have caught three of the six, and I’m comfortable saying that it is just very, very difficult. But in my mind, this also makes it the most interesting and impressive!</p>
 <p>Of the three fish I’ve caught, the first took me almost a full day and a half fishing in the middle of nowhere, the second was an absolute miracle, and third required a backpack into the mountains to get to the fish. Nevada also refers to their contest as a “fish slam” rather than a “trout slam” because two of the fish are not trout. Bull trout is characterized as a char, while mountain whitefish is a different kind of salmonid. I admittedly don’t understand enough about fish biology to know the differences between these species.</p>
 <p>At the time I started my slam, Nevada provided significantly less information on where to find native fish than either Wyoming or Utah. Their online resources have since improved, but in 2019 the information on the webpage was literally a typewritten pdf file describing where each species could be found. I had to cross-reference that list with accessible waters, what they looked like, how fishable they were likely to be, and what access was like. I was rightly concerned about high levels of brush and impassable roads. One resource I have found to be helpful is Nevada’s annual Trophy Fish book, which can be found via the webpage <a href="https://www.ndow.org/get-outside/fishing/angler-recognition-program/">here</a>. The book lists people who have completed the slam each year and, importantly, where they caught their fish. Though the book changes every year, I was able to access old copies by editing the url. I used the waters frequently mentioned in the book to target my search.</p>
-<section id="bonneville-cutthroathendrys-creek" class="level4">
-<h4 class="anchored" data-anchor-id="bonneville-cutthroathendrys-creek">Bonneville Cutthroat–Hendry’s Creek</h4>
+<section id="bonneville-cutthroathendrys-creek" class="level3">
+<h3 class="anchored" data-anchor-id="bonneville-cutthroathendrys-creek">Bonneville Cutthroat–Hendry’s Creek</h3>
 <p>As with my two previous completed slams (Utah and Wyoming), the Bonneville was the first fish I caught in Nevada. The fish exists in a few isolated mountain streams on the east side of the state, and while it wasn’t a short drive for me to get to the Great Basin National Park area, this was about the closest, easily catcheable fish. The Yellowstone is closer to me, but I hadn’t yet figured out how I was going to catch it. I also happened to be camping in central Utah, so I decided to make a one night detour out to Nevada.</p>
 <p>The mountains in Nevada are unique because they tend to be long, narrow and rise steeply up from the Great Basin. Nevada is the dryest state in the country due to rain-shadowing from the Sierra Nevada, but it’s amazing how quickly the scenery can change with a little elevation. Utah is not too different, but the mountains tend to be a little bigger and a little wider, not giving the same overall feeling that Nevada mountains do of being “sky islands”. The Great Basin, especially in the northern part of the state, looks unlike almost anywhere else I’ve been in the world.</p>
 <p>The amazing thing to me about the Bonneville trout in Nevada is that the streams disappear into the desert when they come out of the mountains. The fish traveled up these creeks as Lake Bonneville shrunk, then disappeared, and they’ve been there ever since, living in just a few miles of tiny creeks.</p>
@@ -154,16 +165,16 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p>I fished on and on, and finally hooked another. I was beginning to get worried, and because I lost the first fish, I aggressively flung the second fish nearly onto the trail. This was not easy fishing, and I’m not sure how quickly others have caught their fish in Hendry’s, but I struggled. Getting in and out of the little drainage to get around brush was tough, finding holes to dap into was tough, and catching the fish was tough. In fact, identifying holes where there might be a fish was easy, but getting to the hole and actually catching the fish was a struggle. I stopped fishing almost immediately after I had my fish. The scenery was fine, as the mountains had some nice red rocks and pine trees higher up the trail.</p>
 <p><img src="fishing_pics/hendrys_hole.JPG" class="img-fluid"> My fish came out of this hole, which was approximately six inches across and three inches deep.</p>
 </section>
-<section id="lahontan-cutthroatmarys-river-attempt-1" class="level4">
-<h4 class="anchored" data-anchor-id="lahontan-cutthroatmarys-river-attempt-1">Lahontan Cutthroat–Marys River, Attempt 1</h4>
+<section id="lahontan-cutthroatmarys-river-attempt-1" class="level3">
+<h3 class="anchored" data-anchor-id="lahontan-cutthroatmarys-river-attempt-1">Lahontan Cutthroat–Marys River, Attempt 1</h3>
 <p>Most people completing the Nevada slam will come from the west side of the state because that is where the population centers are. For them, the Lahontan will be easier because it is native to drainages that flow toward or near the west side of the state. Unfortunately for me, it is more difficult to access the Lahontan from the east side as one inevitably has to drive across half the state to access waters in which it’s likely more difficult to catch the fish as compared to western rivers such as the Truckee. For most people then, my situation will not apply because the obvious answer is just to fish the Truckee in Reno.</p>
 <p>I dislike driving long distances so I sought the water farthest to the east that holds Lahontans and settled on the Marys River which flows out of the Jarbidge Mountains toward the Humboldt River east of Elko. This was a mistake. Had I gone farther, to the Elko area, there are creeks with Lahontans that flow off the east side of the Independence Mountain Range, and one in particular, Gance Creek, shows up in a lot of articles as an easy place to catch them. But, because I tried to save myself some driving time, I drove north from the 80 onto a dirt road for almost 40 miles. Outside of Wells it starts as Metropolis Road and passes the abandoned mining town of Metropolis, then continues on as Deeth-O’Neil County Road. The town of Metropolis is worth a stop, and the plaque explains that it died from a combination of getting cut-off from its water supply, a plague of jackrabbits, and mormon crickets. A bit of an ignominious death.</p>
 <p>At the turnoff from Deeth-O’Neil Road, I had to cross the river on a bridge, go up and over a hill, across a plateau, then over another small ridge, and drop back down to the river miles upstream. The road was well-maintained until the plateau section, and where it drops back down to the river. It is very steep in this area, with some small, muddy creek crossings. I would only attempt this drive in a high-clearance vehicle, and though I did it with two wheel drive, it seemed iffy. Once at the river, there are a number of nice dispersed campsites. The area is somewhat well-used but the night I was there, only one other group was camping well away from us.</p>
 <p><img src="fishing_pics/near_Marys_river.jpg" class="img-fluid"> Near lower Marys River. There were no trout here but the scenery was nice.</p>
 <p>The Marys River in this area looked fishable. I was worried there wouldn’t be enough water as I was there in early September, but the river was bigger than I thought. It looked a little stagnant in places, but I didn’t see any reason why there wouldn’t be trout. To make a long story short, there weren’t any trout in the river. I fished without success, spent the night, and faced a decision. Should I continue looking for trout, or move on to another creek? T Creek was on the same road I came in on, and also is supposed to hold Lahontan, so I thought I’d try that. That also proved to be futile, and it was much harder fishing because it was so small and brushy. It occurred to me to go higher, but I wasn’t sure how much higher I had to go, and this was a brief weekend trip so I was facing some time pressure. On my way back to Utah, I wanted to stop in the northeast corner of Nevada and try to catch a Yellowstone.</p>
 </section>
-<section id="yellowstone-cutthroatgoose-creek" class="level4">
-<h4 class="anchored" data-anchor-id="yellowstone-cutthroatgoose-creek">Yellowstone Cutthroat–Goose Creek</h4>
+<section id="yellowstone-cutthroatgoose-creek" class="level3">
+<h3 class="anchored" data-anchor-id="yellowstone-cutthroatgoose-creek">Yellowstone Cutthroat–Goose Creek</h3>
 <p>I abandoned the search for a Lahonton and made the decision to head toward Goose Creek. This was another long drive out, through the town of Jackpot for gas, then across another set of dirt roads to the Goose Creek area. As the Nevada DWF makes a point of saying, the Yellowstone will likely be the hardest fish to catch because it exists in only a few creeks and they are all on private land. I really didn’t want to figure out how to ask for permission, so I had a strategy. The first creek I would come across on the road was Little Goose Creek, and using Caltopo and OnX, it looked like there might be some public access to the water. Then, if I could cross a small piece of private, I could access a small canyon through which Little Goose flowed and was entirely public.</p>
 <p>Little Goose Creek crosses the road at an intersection of two well maintained dirt roads. The creek was small but not brushy and looked somewhat deep. I was hoping I’d get lucky here, catch the fish in a few minutes and be able to leave. I began walking up Little Goose, casting my dry fly, but having no success. I’m pretty sure this was public land but very quickly, I came to posted private land that I wasn’t willing to cross, so that was that for Little Goose Creek. I got back in my truck and headed toward Trout Creek.</p>
 <p>I had read that this entire area belonged to one family with a few ranches. I’d also read a report online of another angler saying they caught their Yellowstone in Trout Creek, which flows into Goose Creek. That angler reported using a dispersed campsite made available by the ranch on Trout Creek. That is where I was headed, though I was somewhat apprehensive about using a campsite supposedly available to the public. As I turned onto the road up Trout Creek, I was greeted with this sign.</p>
@@ -180,8 +191,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p>I have no idea how I pulled that off, and I suspect I could spend another week there and not catch another fish. I’m not sure what advice to offer to others. NDOW offers the not terribly helpful advice to ask for permission to fish on Goose Creek at one of the ranch houses. I didn’t see any ranch houses anywhere near the road as everything seemed to be fenced off. In other words, had I not run across the rancher in his side-by-side, I don’t know how I would have asked for permission. I interpret the sign and campsite on Trout Creek as providing permission to fish that water, but I couldn’t catch a fish there. I’m guessing I was maybe two or three miles from the Idaho border, so the fish might just be up higher. Or perhaps, I just needed to fish it longer. It looks like parts of Trout Creek lie on public land very close to the Idaho border. An app like OnX would help immensely as when I was fishing it I couldn’t determine where I was in relation to the public land or the border. The best option, absent asking permission, might be to fish Little Goose Creek for the stretch on which it flows through public land. Maps like CalTopo show public land access to a portion of the creek off the road.</p>
 <p>In short, I’m glad I don’t have to catch a second Yellowstone cutt in Nevada.</p>
 </section>
-<section id="lahontan-cutthroatmarys-river-attempt-2" class="level4">
-<h4 class="anchored" data-anchor-id="lahontan-cutthroatmarys-river-attempt-2">Lahontan Cutthroat–Marys River, Attempt 2</h4>
+<section id="lahontan-cutthroatmarys-river-attempt-2" class="level3">
+<h3 class="anchored" data-anchor-id="lahontan-cutthroatmarys-river-attempt-2">Lahontan Cutthroat–Marys River, Attempt 2</h3>
 <p>Nevada has some odd bureaucratic requirements for completing the slam. First, they used to require the angler take a picture with their fish. This requirement seems to have vanished from their updated webpages. Second, the angler must print off their form for each fish as they catch it, then mail it to NDOW with the picture. I received an email confirming my submission, and after submitting my Yellowstone, another emailed confirmation from an NDOW employee and a compliment on my fish. I emailed back and told him about striking out on the Marys. His response indicated that the trout are up much higher, which I took to mean the Jarbidge Mountains, the source of the Marys.</p>
 <p>The Jarbidge Mountains are an undiscovered jem. The Marys River flows out of a drainage on the south side of the mountains, into the Humboldt River and Great Basin, while the Jarbidge River flows off the north side, toward the Snake River, and eventually into the Columbia and to the Pacific. The Jarbidge River is home to bull trout and redband, two of which are required for the Nevada slam, and neither of which I have yet caught. My goal on this trip was the Lahontan.</p>
 <p><img src="fishing_pics/jarbidge.jpg" class="img-fluid"> The Jarbidge Mountains are a spectacular slice of northern Nevada.</p>
