--- a/transcatalina_hike.html
+++ b/transcatalina_hike.html
@@ -6,8 +6,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="keywords" content="Trans-Catalina Trail, Catalina Island hiking, Southern California trails, backpacking tips, hiking logistics">
+<meta name="description" content="The challenges, beauty, and logistics of hiking the Trans-Catalina Trail. Includes route details, tips, and personal experiences.">
 
-<title>Doctor Dry Fly - Trans-Catalina Trail</title>
+<title>Doctor Dry Fly - Hiking the Trans-Catalina Trail: Tips, Logistics, and Experience</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -131,9 +133,14 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Trans-Catalina Trail</h1>
+<h1 class="title">Hiking the Trans-Catalina Trail: Tips, Logistics, and Experience</h1>
 </div>
 
+<div>
+  <div class="description">
+    The challenges, beauty, and logistics of hiking the Trans-Catalina Trail. Includes route details, tips, and personal experiences.
+  </div>
+</div>
 
 
 <div class="quarto-title-meta">
