--- a/utah_cutt_slam.html
+++ b/utah_cutt_slam.html
@@ -6,8 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="keywords" content="Utah Cutthroat Slam, cutthroat trout fishing Utah, Utah fishing challenge, native cutthroat trout Utah, best fishing spots Utah, Utah cutthroat species, Utah fishing challenges">
 
-<title>Doctor Dry Fly - Utah Cutthroat Slam</title>
+<title>Doctor Dry Fly - Utah Cutthroat Slam: A Guide to Catching Utah’s Native Trout</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -114,14 +115,24 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#bear-river-cutthroatcache-valley" id="toc-bear-river-cutthroatcache-valley" class="nav-link active" data-scroll-target="#bear-river-cutthroatcache-valley">Bear River Cutthroat–Cache Valley</a></li>
+  <li><a href="#yellowstone-cutthroatraft-river-mountains" id="toc-yellowstone-cutthroatraft-river-mountains" class="nav-link" data-scroll-target="#yellowstone-cutthroatraft-river-mountains">Yellowstone Cutthroat–Raft River Mountains</a></li>
+  <li><a href="#colorado-river-cutthroatboulder-mountain" id="toc-colorado-river-cutthroatboulder-mountain" class="nav-link" data-scroll-target="#colorado-river-cutthroatboulder-mountain">Colorado River Cutthroat–Boulder Mountain</a></li>
+  <li><a href="#bonneville-cutthroatsalt-lake-city-area" id="toc-bonneville-cutthroatsalt-lake-city-area" class="nav-link" data-scroll-target="#bonneville-cutthroatsalt-lake-city-area">Bonneville Cutthroat–Salt Lake City Area</a></li>
+  <li><a href="#summary" id="toc-summary" class="nav-link" data-scroll-target="#summary">Summary</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Utah Cutthroat Slam</h1>
+<h1 class="title">Utah Cutthroat Slam: A Guide to Catching Utah’s Native Trout</h1>
 </div>
 
 
@@ -136,8 +147,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<section id="bear-river-cutthroatcache-valley" class="level4">
-<h4 class="anchored" data-anchor-id="bear-river-cutthroatcache-valley">Bear River Cutthroat–Cache Valley</h4>
+<section id="bear-river-cutthroatcache-valley" class="level2">
+<h2 class="anchored" data-anchor-id="bear-river-cutthroatcache-valley">Bear River Cutthroat–Cache Valley</h2>
 <p>In Cache Valley, there are a number of options for catching the Bear River cutthroat as all local waters contain them. The Logan River is the largest river, and most obvious option. It’s a classic western free-stone trout stream, fishable from about early July through early November. In most places, the Logan is no more than knee deep, though there are some larger holes.</p>
 <p>Brown trout, and even some brook and rainbow trout also exist in the Logan, but the higher one goes in the canyon, the more likely it is one will catch a cutt. I mentally divide the river into lower, middle, and upper sections. I think of the lower section as from the mouth of the canyon where a small lake exists (locally referred to as “first dam”), to about Card Canyon, where there is a picnic area and turnout on the highway. From there, the middle section flows close to the road in most places in a tight canyon until the road climbs high above the river, referred to as the “dugway.” I’d never heard that term until I moved to Utah, and I’m still not sure what it means, but the road cuts across the face of a mountain and climbs until it once again meets the river. Temple Fork flows into the Logan shortly after the dugway. The upper part of the Logan is my favorite area to fish as the river is usually a little farther away from the road, and the fishing and scenery are good. However, this area probably receives the most pressure, though pressure on the Logan is light compared to most well-known western trout streams.</p>
 <p>I almost always fish above about Card Canyon (haven’t had much success lower), and the middle canyon section is mostly brown trout. My experience has been that after the dugway, in the upper section, there are more cutts than browns. The fishing is generally good on drys, especially in mid to late summer. Current regulations prohibit fishing from Red Banks Campground upstream to Idaho until the second weekend in July, though in a good water year the river will be still be blown out by then.</p>
@@ -155,8 +166,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p><img src="fishing_pics/left_hand_fork.JPG" class="img-fluid"> Left Hand Fork of Blacksmith Fork.</p>
 <p>If I were trying to catch the Bear River cutt, I’d probably start in the upper Logan or Franklin Basin, and failing that, go to Right Hand Fork. The fishing in the Logan and Franklin Basin is easier because they are bigger waters and there is more room to cast and wade. But, if those two didn’t work for whatever reason, Right Hand Fork is almost a sure thing if you can find a spot to make a cast without spooking the fish or getting tangled in the brush. Spawn Creek is also a good option, but it requires a 15 to 20 minute hike up to the beaver ponds, and there are brooks and browns in addition to cutthroats.</p>
 </section>
-<section id="yellowstone-cutthroatraft-river-mountains" class="level4">
-<h4 class="anchored" data-anchor-id="yellowstone-cutthroatraft-river-mountains">Yellowstone Cutthroat–Raft River Mountains</h4>
+<section id="yellowstone-cutthroatraft-river-mountains" class="level2">
+<h2 class="anchored" data-anchor-id="yellowstone-cutthroatraft-river-mountains">Yellowstone Cutthroat–Raft River Mountains</h2>
 <p>This is widely accepted to be the most difficult fish to catch in the Utah slam. For most people, the Raft River Range is the farthest drive, the creeks are tiny, and there isn’t a ton of information on where to catch the fish. Some of the online promotional videos I’ve seen show people fishing water in private land or make only vague references to access points. I couldn’t figure out how to access any of the larger water like the Raft River, so I stuck to the most obvious option: Onemile Creek. There is a forest road that goes up the drainage, and my research seemed to suggest this was the best bet on public land.</p>
 <p>When I arrived to the spot where the forest road begins paralleling the creek, there was a jeep parked in a turnout: another guy and his wife also looking to catch the Yellowstone for their slam. From that turnout, they mentioned there is a relatively well-defined hole only a short walk up the creek where they’d brought a fish up. Onemile creek is very small and doesn’t even look like it can hold fish, but unlike a lot of creeks this size in Utah, it wasn’t that brushy. I started downstream of the hole they mentioned, fished up to it, and had absolutely no success. I hooked a shockingly large fish in that hole, got it to the surface and lost it. I made a few more casts, but it was clear the fish wasn’t coming back. I continued fishing up Onemile Creek for a while, and found no signs of life.</p>
 <p><img src="fishing_pics/onemile.JPG" class="img-fluid"> Onemile creek is small.</p>
@@ -166,23 +177,23 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <p>There is a nice forest service campground nearby on Clear Creek, along with lots of dispersed camping. We were going to try and summit Bull Moutain the next day (highest point in the Raft River Range), but it started thunderstorming early in the morning so we left and drove back to Cache Valley. Clear Creek is quite fun to fish as there are a ton of fish that looked like cutts, but I think they are Inland Redband trout, as they are missing the orange slash under the jaw and have a pink lateral stripe. The DWR’s website does not mention Clear Creek as a possible water in which to find Yellowstones.</p>
 <p><img src="fishing_pics/clearcreek.JPG" class="img-fluid"> Trout from Clear Creek. I think these are Inland Redband trout.</p>
 </section>
-<section id="colorado-river-cutthroatboulder-mountain" class="level4">
-<h4 class="anchored" data-anchor-id="colorado-river-cutthroatboulder-mountain">Colorado River Cutthroat–Boulder Mountain</h4>
+<section id="colorado-river-cutthroatboulder-mountain" class="level2">
+<h2 class="anchored" data-anchor-id="colorado-river-cutthroatboulder-mountain">Colorado River Cutthroat–Boulder Mountain</h2>
 <p>Living in Cache Valley is an advantage for reaching the Bear River and Yellowstone cutts (the Raft River is less than a two hour drive), but it is a decided disadvantage for the next fish I attempted to catch, the Colorado River cutt. In general, the Colorado River cutt is probably slightly easier to catch than the Yellowstone, but the geography of its native waters make it a long trip from Cache Valley. I had a hiking and sightseeing trip planned to the Capitol Reef area, so I did research on streams near the park entrance that might hold Colorado River cutts. When we visit Capitol Reef we like to stay at a nice forest service campground about a half hour from the park entrance. The DWR website lists Pine Creek as a nearby option so I started there with really no other plan if it didn’t work. Pine Creek flows off the northwest side of Boulder Mountain, but access is at a low enough elevation that isn’t too far of a drive from Bicknell.</p>
 <p><img src="fishing_pics/pine_creek2.JPG" class="img-fluid"> Pine Creek, near Bicknell, UT.</p>
 <p>I could find almost no information on the fishing aside from a single mention on the Utah Slam website so I had no idea what the road condition was, how big the creek was, or where to fish. The road turned out to be a good forest service road that I drove up until I found a spot to pull over and walk to the creek. Where I parked, the road isn’t alongside the creek so you can’t see the water until you get closer. Surprise, surprise, Pine Creek is tiny with what I would characterize as “moderate” brush (a running theme for Utah fly fishing). But, on walking up to the creek, I could see fish!</p>
 <p>Despite the look of the creek, it was relatively easy fishing; I walked upstream, found a brush-free spot, made a cast with a dry fly, and usually hooked a small fish. I caught a few quickly and had a nice time working my way upstream. I had plans to leave and fish the Fremont which is supposed to hold larger brown trout but as I was packing up after fishing Pine Creek, I stepped on my rod and broke it. I didn’t realize this until I drove to the Fremont, made a cast, and the top of my rod flew off. That was something like the third time I’d broken a rod, and there would be (and will be) more.</p>
 </section>
-<section id="bonneville-cutthroatsalt-lake-city-area" class="level4">
-<h4 class="anchored" data-anchor-id="bonneville-cutthroatsalt-lake-city-area">Bonneville Cutthroat–Salt Lake City Area</h4>
+<section id="bonneville-cutthroatsalt-lake-city-area" class="level2">
+<h2 class="anchored" data-anchor-id="bonneville-cutthroatsalt-lake-city-area">Bonneville Cutthroat–Salt Lake City Area</h2>
 <p>I left the Bonneville for last as I assumed it would be the easiest. I am in Salt Lake City often enough that I thought I’d just catch it quickly when in the area. Unfortunately, by the end of the summer, I just hadn’t gotten around to it. After an airport run, I thought I’d go to one the creeks that flows out of the Wasatch into the valley. The closest creek to the airport I could find was Mill Creek, which is right above the City and holds Bonnies according to the DWR website. I’d never been up there so I had no idea what the fishing was like.</p>
 <p>It turns out Mill Creek Canyon is a very popular place to recreate on a Sunday afternoon. Not only was it crowded, you have to pay to visit in the canyon on the way out, which seems very odd. I fought traffic, found a place to park on the road, and walked down to the creek. This was late September and I was surprised to find a little snow on the ground because the sun doesn’t reach the creek in the fall or winter months. The shadows, combined with the warmish air temperature which caused the snow to melt and re-freeze, produced maximum slickness when wading.</p>
 <p><img src="fishing_pics/mill_creek.JPG" class="img-fluid"> Mill Creek.</p>
 <p>Also, unsurprisingly, Mill Creek is tiny and moderately brushy, and it looked just okay in terms of fishability. The low light in the canyon made it difficult to see my dry fly and for about the first hour, nothing happened. This was all very annoying because the Bonnie was supposed to be the easy one. I began thinking the DWR made a mistake and regretting my decision to fish Mill Creek. I finally hooked a fish, after a tough, cold wade. On the way out, I had to sit in traffic waiting to pay the fee. I completed the cutt slam in one year, but I feel comfortable saying that will be my last visit to Mill Canyon.</p>
 <p>I probably should have gone to a larger, nicer river to catch the Bonnie and most anglers will drive from Salt Lake City to the north slope of the Uintas to catch the fish there, or fish the Ogden or Weber. All are good options; Mill Creek has the advantage of being twenty minutes from SLC, but the experience is not what we think of in terms of western trout fishing.</p>
 </section>
-<section id="summary" class="level4">
-<h4 class="anchored" data-anchor-id="summary">Summary</h4>
+<section id="summary" class="level2">
+<h2 class="anchored" data-anchor-id="summary">Summary</h2>
 <p>Relative to the other state slams I’ve done or attempted, Utah was the easiest, and is a good starter slam. It helps that it only requires catching four fish. The driving distances are shorter than Wyoming or California, and the fishing is pretty easy with the exception of the Yellowstone Cutt. The Bear River and Bonneville should, more or less, be gimmes, with the Colorado River somewhat tougher (though I got lucky Pine Creek was a good spot for me). Catching the Yellowstone out of Sawmill Canyon felt like a miracle, especially after having zero success in Onemile. There are other creeks listed on the DWR website that hold Yellowstones, but my impression is that they require significantly more effort to reach, or flow mostly through private land. I had a hard time figuring out access points. If I were going back, I would give myself some backup options if neither Onemile nor Sawmill worked. The most obvious seems to be Johnson Creek, which I’ve read recently is a good option, and there have been reports of anglers catching large Yellowstones from that water. It is farther from Clear Creek Campground however, and I don’t know what access is like.</p>
 <p>One additional note on Utah’s slam. Unlike every other state slam, completing the Utah slam is not free; it requires paying a fee of $20. The money is used to fund conservation projects for fish, and Utah DNR trumpets the projects they’ve completed with the money. I have mixed feelings about charging. I worry the fee will exclude or dissuade people who would otherwise complete the challenge, but raising money for conservation projects is undoubtedly beneficial. If we’re honest about the socio-economic status of most people who are fly fishing, I doubt the $20 is making much of a difference in whether someone decides to complete the slam. On balance then, it seems like a good idea, and other states should probably implement a similar fee.</p>
 <p><a href="./fishing_landing.html">Back to Main Page</a></p>
